[package]
name = "piyo_net"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "piyo_nic"
path = "src/piyonic_main.rs"

[[bin]]
name = "piyo_stack"
path = "src/piyostack_main.rs"

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
procfs = "0.15.1"
sysinfo = "0.29.10"
tokio = { version = "1.32.0", features = ["full", "io-util"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.8", features = ["codec"] }
